--- a/StellarGames/bin/.gitignore
+++ b/StellarGames/bin/.gitignore
@@ -1,13 +1,1 @@
-/fieldTileE.png
-/fieldTileN.png
-/fieldTileS.png
-/fieldTileW.png
-/forestTileE.png
-/forestTileN.png
-/forestTileS.png
-/forestTileW.png
-/grassTile.png
-/villageTileE.png
-/villageTileN.png
-/villageTileS.png
-/villageTileW.png
+/carcassonne/
