--- a/StellarGames/bin/.gitignore
+++ b/StellarGames/bin/.gitignore
@@ -1,2 +1,16 @@
 /carcassonne/
 /newcassonne/
+/fieldTileE (copy).png
+/fieldTileN (copy).png
+/fieldTileS (copy).png
+/fieldTileW (copy).png
+/forestTileE (copy).png
+/forestTileN (copy).png
+/forestTileS (copy).png
+/forestTileW (copy).png
+/grassTile (copy).png
+/villageTileE (copy).png
+/villageTileN (copy).png
+/villageTileS (copy).png
+/villageTileW (copy).png
+/oldcassonne/
